unpackaged/main/default/objects/zkfedex__Pickup__c/zkfedex__Pickup__c.object-meta.xml
<CustomObject>
    <label>FedEx Pickup</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>FedEx Pickup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx Pickups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>