unpackaged/main/default/objects/zkfedex__Pickup__c/fields/zkfedex__BuildingType__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BuildingType__c</fullName>
    <label>Building Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>