unpackaged/main/default/objects/zkfedex__Pickup__c/fields/zkfedex__BuildingTypeDescription__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BuildingTypeDescription__c</fullName>
    <label>Building Type Description</label>
    <type>TextArea</type>
</CustomField>