unpackaged/main/default/objects/zkfedex__Pickup__c/fields/zkfedex__CancelReason__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CancelReason__c</fullName>
    <label>Cancel Reason</label>
    <type>TextArea</type>
</CustomField>