unpackaged/main/default/objects/zkfedex__Pickup__c/fields/zkfedex__CarrierCode__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CarrierCode__c</fullName>
    <label>Carrier Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>