unpackaged/main/default/objects/zkfedex__Pickup__c/fields/zkfedex__CloseTimeMinute__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CloseTimeMinute__c</fullName>
    <label>Close Time Minute</label>
    <length>5</length>
    <type>Text</type>
</CustomField>