unpackaged/main/default/objects/zkfedex__Pickup__c/fields/zkfedex__CompanyName__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CompanyName__c</fullName>
    <label>Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>