unpackaged/main/default/objects/zkfedex__Pickup__c/fields/zkfedex__ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ContactEmail__c</fullName>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>