unpackaged/main/default/objects/zkfedex__Pickup__c/fields/zkfedex__ContactName__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ContactName__c</fullName>
    <label>Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>