unpackaged/main/default/objects/zkfedex__Pickup__c/fields/zkfedex__Country__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Country__c</fullName>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>