unpackaged/main/default/objects/zkfedex__Pickup__c/fields/zkfedex__CourierRemarks__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CourierRemarks__c</fullName>
    <label>Courier Remarks</label>
    <type>TextArea</type>
</CustomField>