unpackaged/main/default/objects/zkfedex__Pickup__c/fields/zkfedex__isResidential__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__isResidential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address is Residential</label>
    <type>Checkbox</type>
</CustomField>