unpackaged/main/default/objects/zkfedex__Pickup__c/fields/zkfedex__LocationStationId__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__LocationStationId__c</fullName>
    <label>Location Station Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>