unpackaged/main/default/objects/zkfedex__Pickup__c/fields/zkfedex__PickupCancelled__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PickupCancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pickup Cancelled</label>
    <type>Checkbox</type>
</CustomField>