unpackaged/main/default/objects/zkfedex__Pickup__c/fields/zkfedex__PickupConfirmationNumber__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PickupConfirmationNumber__c</fullName>
    <label>Pickup Confirmation Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>