unpackaged/main/default/objects/zkfedex__Pickup__c/fields/zkfedex__PickupServiceCategory__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PickupServiceCategory__c</fullName>
    <label>Pickup Service Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>