unpackaged/main/default/objects/zkfedex__Pickup__c/fields/zkfedex__ReadyTime__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ReadyTime__c</fullName>
    <label>Ready Time</label>
    <type>DateTime</type>
</CustomField>