unpackaged/main/default/objects/zkfedex__Pickup__c/fields/zkfedex__State__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__State__c</fullName>
    <label>State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>