unpackaged/main/default/objects/zkfedex__Pickup__c/fields/zkfedex__Street__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Street__c</fullName>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>