unpackaged/main/default/objects/zkfedex__Pickup__c/fields/zkfedex__Weight__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Weight__c</fullName>
    <label>Weight</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>