unpackaged/main/default/objects/zkfedex__Pickup__c/fields/zkfedex__WeightUnits__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__WeightUnits__c</fullName>
    <label>Weight Units</label>
    <length>5</length>
    <type>Text</type>
</CustomField>